--- a/AlmondProcessorPageMD.html
+++ b/AlmondProcessorPageMD.html
@@ -135,8 +135,8 @@
     </ul>
     <p class="intro">The next step is to choose your Processor to determine which Quality Bonus Schedule is used. Most processors incentivize lower damage by adding between $0-$0.20/lbs based on the damage assessment and several other factors. Most processors also penalize EXTREMELY HIGH damage, as well. If you process your own nuts, choose "No Processor" and quality bonus incetives will not be used. If you don't want to use any of these QB schedules, "Averge Model for Quality Bonuses" takes the average bonus across the processors included.</p>
     <p class="large-text">Which Processor would you like to look at?</p>
-    <button onclick="location.href='AlmondRPACMDROI.html'">RPAC</button>
-    <button onclick="location.href='AlmondBDGMDROI.html'">Blue Diamond</button>
+    <button onclick="location.href='AlmondExampleAMDROI.html'">Example A</button>
+    <button onclick="location.href='AlmondExampleBMDROI.html'">Example B</button>
     <button onclick="location.href='AlmondNoProcessor.html'">No Processor</button>   
     <button onclick="location.href='AlmondProcessorPageMonitoring.html'">Average Model for Quality Bonuses</button>
 </body>
