--- a/PistachioProcessorPageMD.html
+++ b/PistachioProcessorPageMD.html
@@ -135,7 +135,7 @@
     </ul>
     <p class="intro">The next step is to choose your Processor to determine which Quality Bonus Schedule is used. Most processors incentivize lower damage by adding between $0-$0.25/lbs on Edible Open Inshell Yield (~80% of total Yield) based on the damage assessment and other factors. Processors also penalize EXTREMELY HIGH damage. If you process your own nuts, choose "No Processor" and quality bonus incetives will not be used, but you'll still see the benefit of Yield preservation. If you don't want to use any of these QB schedules, "Averge Model for Quality Bonuses" takes the average bonus across the processors included.</p>
     <p class="large-text">Which Processor would you like to look at?</p>
-    <button onclick="location.href='PistachioHorizonMDROI.html'">Example A</button>
+    <button onclick="location.href='PistachioExampleAMDROI.html'">Example A</button>
     <button onclick="location.href='PistachioNoProcessor.html'">No Processor</button>   
     <button onclick="location.href='PistachioProcessorPageMonitoring.html'">Average Model for Quality Bonuses</button>
 </body>
