--- a/PistachioExampleAMDROI.html
+++ b/PistachioExampleAMDROI.html
@@ -4,157 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example A MD Calc</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #15bcbc;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-        }
-
-        h1 {
-            color: #333;
-            margin-bottom: 20px;
-            position: absolute;
-            top: 2%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            align-items: center;
-            justify-content:center;
-            width: max-content;
-        }
-
-        form {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 700px;
-        }
-        .container {
-            display:flex;
-            align-items:center;
-            justify-content:center;
-            flex-direction: column;
-            height: 100vh;
-            margin-top: 170px;
-        }
-
-        .input-container {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-            margin-top: 150px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-            color: #333;
-        }
-
-        input {
-            width: calc(100% - 16px);
-            padding: 8px;
-            margin-bottom: 16px;
-            box-sizing: border-box;
-        }
-        .input-group {
-             display: flex;
-             flex-direction: column;
-            margin-bottom: 15px;
-            }
-
-        .input-group label {
-            margin-bottom: 5px;
-        }
-
-        button {
-            background-color: navy;
-            color: #fff;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        h2 {
-            margin-top: 20px;
-            color: #333;
-        }
-
-        p {
-            color: #666;
-        }
-
-        .note-button {
-            background-color: transparent;
-            border: none;
-            color: blue;
-            cursor: help; /* Change cursor to pointer on hover */
-            text-decoration: underline; /* Underline text on hover */
-            font-size: 18px;
-            padding: 10px;
-            text-align: left;
-            margin-top: 20px;
-        }
-        
-        .note-button:hover::after {
-            content: attr(data-note); /* Show note when hovered */
-            position: absolute;
-            background-color: #f9f9f9;
-            padding: 5px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: max-content;
-            z-index: 1;
-            font-size: 16px;
-        }
-        
-        .tooltip {
-            position: relative;
-            display: inline-block;
-            border-bottom: 1px dotted black; /* Add a dotted underline */
-        }
-
-        .tooltip .tooltiptext {
-            visibility: hidden;
-            width: max-content;
-            background-color: #555;
-            color: #fff;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px 5px;
-            position: absolute;
-            z-index: 1;
-            bottom: 125%;
-            left: 50%;
-            margin-left: -75px;
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
-        .tooltip .tooltiptext::after {
-            content: "";
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            margin-left: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: #555 transparent transparent transparent;
-        }
-
-        .tooltip:hover .tooltiptext {
-            visibility: visible;
-            opacity: 1;
-        }
-    </style>
+    <link rel="stylesheet" href="calculatorpistachios.css">
 </head>
 <body>
     <h1>Example A Mating Disruption Calculator in Pistachios</h1>
