--- a/PistachioProcessorPageMD.html
+++ b/PistachioProcessorPageMD.html
@@ -4,139 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pistachio MD Research Summary</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #15bcbc;
-            text-align: center;
-            padding-top: 50px; /* Add some top padding for better appearance */
-        }
+    <link rel="stylesheet" href="newstyles.css">
 
-        h1 {
-            font-size: 50px;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .small-text {
-            font-size: 14px;
-            margin-top: 5px;
-            margin-bottom: 20px;
-        }
-
-        .large-text {
-            font-size: 25px;
-            margin-top: 30px;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-
-        .tooltip {
-            position: relative;
-            display: inline-block;
-            border-bottom: 1px dotted black; /* Add a dotted underline */
-        }
-
-        .tooltip .tooltiptext {
-            visibility: hidden;
-            width: 150px;
-            background-color: #555;
-            color: #fff;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px 0;
-            position: absolute;
-            z-index: 1;
-            bottom: 125%;
-            left: 50%;
-            margin-left: -75px;
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
-        .tooltip .tooltiptext::after {
-            content: "";
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            margin-left: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: #555 transparent transparent transparent;
-        }
-
-        .tooltip:hover .tooltiptext {
-            visibility: visible;
-            opacity: 1;
-        }
-
-        p {
-            font-size: 14px;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        p.intro {
-            text-align: center;
-            font-size: 20px;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            padding: 0 20px;
-        }
-
-        p.intro span {
-            font-weight: bold;
-            color: black;
-        }
-
-        .bullet-list {
-            background-color:#fff;
-            border-radius: 8px; /* Add border radius for rounded corners */
-            padding: 20px; /* Add padding inside the box */
-            margin: 0 auto; /* Center the box horizontally */
-            width: 25%; /* Set width of the box to 50% of the viewport */
-            text-align: left; /* Align text to the left within the box */
-            border: 2px solid #333; /* Add border */
-        }
-
-
-        ul {
-            list-style-type: disc;
-            margin-left: 30px;
-        }
-
-        button {
-            font-size: 20px;
-            padding: 15px 30px;
-            margin: 10px;
-            background-color: navy;
-            color:#fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #fff;
-            color: black;
-        }
-    </style>
 </head>
 <body>
     <h1>Pistachio Mating Disruption Research Summary</h1>
     <p class="small-text">Created by: <span class="tooltip"><span class="tooltiptext">Contact Thomas Martin for more information: (559) 321-4488 tmartin@trece.com</span>Thomas Martin</span></p>
-    <p class="intro">Mating Disruption is estimated to reduce damage in Pistachios by 50% or more. Typically, as you accumulate larger, contiguous acreage under mating disruption, you can expect better results. Therefore, the model will estimate a 50% reduction in damage as the benefit of Mating Disruption. For example:</p>
+    <p class="intro">Mating Disruption has been shown to reduce damage due to NOW by 50% or more. Typically, as you accumulate larger, contiguous acreage under mating disruption, you can expect better results.</p>
+    <p class="intro">The model estimates a 50% reduction in damage by decreasing the Original Rejects % by 50%. For example:</p>
     <ul class="bullet-list">
-        <li>10% Damage -> 5% Damage with MD</li>
-        <li>5% Damage -> 2.5% with MD</li>
-        <li>2% Damage -> 1% with MD </li>
+        <li>10% Damage -> 5% Damage</li>
+        <li>5% Damage -> 2.5% </li>
+        <li>2% Damage -> 1%</li>
     </ul>
-    <p class="intro">The next step is to choose your Processor to determine which Quality Bonus Schedule is used. Most processors incentivize lower damage by adding between $0-$0.25/lbs on Edible Open Inshell Yield (~80% of total Yield) based on the damage assessment and other factors. Processors also penalize EXTREMELY HIGH damage. If you process your own nuts, choose "No Processor" and quality bonus incetives will not be used, but you'll still see the benefit of Yield preservation. If you don't want to use any of these QB schedules, "Averge Model for Quality Bonuses" takes the average bonus across the processors included.</p>
-    <p class="large-text">Which Processor would you like to look at?</p>
+    <p class="intro">Next, choose your Processor to determine which Quality Bonus Schedule is used.</p>
+    <p class="intro">Most processors incentivize lower damage by adding between $0-$0.25/lbs based on the damage assessment and several other factors. Most processors also penalize EXTREMELY HIGH damage, as well.</p>
+  <p class="large-text">Which Processor would you like to look at?</p>
     <button onclick="location.href='PistachioExampleAMDROI.html'">Example A</button>
     <button onclick="location.href='PistachioNoProcessor.html'">No Processor</button>   
-    <button onclick="location.href='PistachioProcessorPageMonitoring.html'">Average Model for Quality Bonuses</button>
+    <p>More processors coming soon! If you'd like to help add your processor, please contact <span class="tooltip"><span class="tooltiptext">Contact info: (559) 321-4488 tmartin@trece.com</span>Thomas Martin</span>.</p>
 </body>
 </html>
